--- a/00_day_pytorch.ipynb
+++ b/00_day_pytorch.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyPhU0htP1b1974r0TgGIoOf"
+      "authorship_tag": "ABX9TyPhU0htP1b1974r0TgGIoOf",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -17,6 +18,16 @@
     "accelerator": "GPU"
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/devanshi311/JAVASCRIPT/blob/main/00_day_pytorch.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "code",
       "execution_count": null,
@@ -558,7 +569,7 @@
       "metadata": {
         "id": "JXMMn-eD5o5o"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -569,7 +580,7 @@
       "metadata": {
         "id": "bk6QGRjw8w9Q"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -578,7 +589,7 @@
       "metadata": {
         "id": "DqRQcn2985Db"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
